Made compatible with newer elasticsearch versions.